--- a/index.html
+++ b/index.html
@@ -1155,7 +1155,7 @@
                 </div>
                 <div class="product__description rte quick-add-hidden">
                   <p><a href="https://heylink.me/nolimithoki" title="Nolimithoki Link Alternatif Login Nolimit Hoki Maxwin Besar Hari Ini 2024"><img alt="Slot Gacor" src="https://cdn.shopify.com/s/files/1/0684/0575/6143/files/daftarbaru_480x480.gif?v=1703489942" width="364" height="141"></a></p>
-                  <p><a href="https://bagholder.us/"><strong>Akun demo slot</strong></a> pg soft memberikan banyak kenyamanan dengan adanya fitur akun slot demo pada permainan mahjong ways dengan bet 200 rupiah bisa dimainkan setiap hari kapanpun dan dimanapun.
+                  <p><a href="https://bagholder.us/"><strong>Nolimithoki</strong></a> akan memberikan link alternatif login situs nolimit hoki demo maxwin besar hari ini pada tahun 2024 di indonesia serta menyediakan berbagai metode deposit online paling lengkap.
 </p>
                   </div>
                 <div class="no-js-hidden" id="price-template--21917908042047__main" role="status">
